Fix light mode and improve spacing

--- a/src/actionStyle.css
+++ b/src/actionStyle.css
@@ -37,9 +37,9 @@ body {
 
 .settings-grid {
     display: grid;
-    grid-template-columns: minmax(162px, max-content) 50px;
+    grid-template-columns: minmax(162px, auto) 50px;
     grid-template-rows: repeat(5, 50px);
-    column-gap: 16px;
+    column-gap: minmax(8px, 16px);
     /* row-gap: 8px; */
     /* border:1px solid white; */
     margin: 0 16px 0 16px;
@@ -51,11 +51,8 @@ body {
     font-family: Roboto, Helvetica, Arial, sans-serif;
 }
 
-.settings-label-indented {
-  justify-self: stretch;
-  align-self: center;
-  font-family: Roboto, Helvetica, Arial, sans-serif;
-  padding: 16px;
+.indented {
+  padding: 0 0 0 16px;
 }
 
 .settings-checkbox {
@@ -90,7 +87,7 @@ body {
 .action-row {
     display: flexbox;
     justify-content: space-around;
-    flex-direction: column;
+    flex-direction: row;
     margin: 16px 14px 0px 14px;
     margin-trim: 8;
     /* margin: 0 0 0 0; */
